--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .root {
-  color: var(--text-color);
-  background: var(--button-background);
-  border: 1px solid var(--border-color);
+  color: var(--color-white);
+  background: var(--color-primary);
+  border: 1px solid var(--color-border);
   border-radius: 4px;
   appearance: none;
   vertical-align: middle;
@@ -14,13 +14,11 @@
   cursor: pointer;
 
   &[data-pressed] {
-    box-shadow: inset 0 1px 2px rgb(0 0 0 / 0.1);
-    background: var(--button-background-pressed);
-    border-color: var(--border-color-pressed);
+    background: var(--color-primary-active);
   }
 
   &[data-focus-visible] {
-    outline: 2px solid var(--focus-ring-color);
+    outline: 2px solid var(--color-primary-border);
     outline-offset: -1px;
   }
 }
