--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -47,14 +47,14 @@
   --color-error-text: #ff4d4f;
   --color-error-text-active: #d9363e;
 
-  --colorLink: #1677ff;
+  --color-link: #1677ff;
   --color-link-hover: #69b1ff;
   --color-link-active: #0958d9;
 
   --color-text: rgba(0, 0, 0, 0.88);
   --color-text-secondary: rgba(0, 0, 0, 0.65);
   --color-text-tertiary: rgba(0, 0, 0, 0.45);
-  --colorTextQuaternary: rgba(0, 0, 0, 0.25);
+  --color-text-quaternary: rgba(0, 0, 0, 0.25);
 
   --color-border: #d9d9d9;
   --color-border-secondary: #f0f0f0;
@@ -68,4 +68,5 @@
   --color-bg-spotlight: rgba(0, 0, 0, 0.85);
   --color-bg-mask: rgba(0, 0, 0, 0.45);
 
+  --color-white: #ffffff;
 }
