--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .root {
   color: var(--color-white);
   background: var(--color-primary);
-  border: 1px solid var(--color-border);
+  border: 1px solid var(--color-primary-border);
   border-radius: 4px;
   appearance: none;
   vertical-align: middle;
@@ -14,7 +14,7 @@
   cursor: pointer;
 
   &[data-pressed] {
-    background: var(--color-primary-active);
+    background: var(--color-primary-bg);
   }
 
   &[data-focus-visible] {
