--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,7 +1,7 @@
 .root {
   padding: 0.286rem;
   margin: 0;
-  border: 1px solid var(--color-border);
+  border: 1px solid var(--color-primary-border);
   border-radius: 6px;
   background: var(--color-bg-container);
   font-size: 1.143rem;
