--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,4 +1,7 @@
 .root {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
   color: var(--color-white);
   background: var(--color-primary);
   border: 1px solid var(--color-primary-border);
