chore: setup stylelint and run linter

--- a/src/components/FormControl/FormControl.module.css
+++ b/src/components/FormControl/FormControl.module.css
@@ -26,5 +26,5 @@
 .inputWrapper > *:focus {
   outline: none;
   border-color: #007bff;
-  box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 2px rgb(0 123 255 / 25%);
 }
