--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -4,7 +4,7 @@
   border-style: solid;
   background-color: var(--color-primary-bg);
   color: var(--color-primary);
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 5%);
 }
 
 .header {
@@ -18,7 +18,7 @@
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 1;
-  letter-spacing: -0.01562em;
+  letter-spacing: -0.0156em;
 }
 
 .description {
