--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -26,7 +26,9 @@
   position: relative;
   color: var(--color-text);
   transition: color 200ms;
+
   --border-color: transparent;
+
   forced-color-adjust: none;
 
   &[data-hovered],
@@ -36,6 +38,7 @@
 
   &[data-selected] {
     --border-color: var(--color-primary);
+
     color: var(--color-primary);
   }
 
@@ -47,7 +50,7 @@
     }
   }
 
-  &[data-focus-visible]:after {
+  &[data-focus-visible]::after {
     content: "";
     position: absolute;
     inset: 4px;
