--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -1,4 +1,4 @@
-.Checkbox {
+.checkbox {
   --selected-color: var(--color-primary);
   --selected-color-pressed: var(--color-primary);
   --checkmark-color: var(--color-white);
@@ -10,7 +10,7 @@
   color: var(--color-text);
   forced-color-adjust: none;
 
-  .CheckboxInput {
+  .checkbox-input {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,23 +32,23 @@
     transition: all 200ms;
   }
 
-  &[data-pressed] .CheckboxInput {
+  &[data-pressed] .checkbox-input {
     border-color: var(--color-primary-border);
   }
 
-  &[data-focus-visible] .CheckboxInput {
+  &[data-focus-visible] .checkbox-input {
     outline: 2px solid var(--color-primary);
     outline-offset: 2px;
   }
 
   &[data-selected],
   &[data-indeterminate] {
-    .CheckboxInput {
+    .checkbox-input {
       background: var(--selected-color);
       border-color: var(--selected-color);
     }
 
-    &[data-pressed] .CheckboxInput {
+    &[data-pressed] .checkbox-input {
       background: var(--selected-color-pressed);
       border-color: var(--selected-color-pressed);
     }
