--- a/src/components/FormControl/FormControl.module.css
+++ b/src/components/FormControl/FormControl.module.css
@@ -1,21 +1,21 @@
-.FormControl {
+.form-control {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
 }
 
-.FormControlLabel {
+.form-control-label {
   margin-bottom: 0.5rem;
   font-weight: bold;
   color: #333;
 }
 
-.FormControlInner {
+.form-control-inner {
   display: flex;
   flex-direction: column;
 }
 
-.FormControlInner > * {
+.form-control-inner > * {
   width: 100%;
   padding: 0.5rem;
   font-size: 1rem;
@@ -23,7 +23,7 @@
   border-radius: 4px;
 }
 
-.FormControlInner > *:focus {
+.form-control-inner > *:focus {
   border-color: #007bff;
   outline: none;
   box-shadow: 0 0 0 2px rgb(0 123 255 / 25%);
