--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,22 +1,36 @@
 :root {
   --color-primary: #1677ff;
-  --color-primary-bg: #e6f4ff;
-  --color-primary-border: #91caff;
-  --color-success: #52c41a;
-  --color-success-bg: #f6ffed;
-  --color-success-border: #b7eb8f;
-  --color-warning: #faad14;
-  --color-warning-bg: #fffbe6;
-  --color-warning-border: #ffe58f;
-  --color-error: #ff4d4f;
-  --color-error-bg: #fff2f0;
-  --color-error-border: #ffccc7;
-  --color-link: #1677ff;
-  --color-link-hover: #69b1ff;
-  --color-text: rgb(0 0 0 / 88%);
-  --color-text-secondary: rgb(0 0 0 / 65%);
-  --color-text-tertiary: rgb(0 0 0 / 45%);
-  --color-text-quaternary: rgb(0 0 0 / 25%);
-  --color-white: #fff;
+  --color-primary-0: #e3f4ff;
+  --color-primary-1: #cce4ff;
+  --color-primary-2: #99c5ff;
+  --color-primary-3: #63a5ff;
+  --color-primary-4: #3689ff;
+  --color-primary-5: #1878ff;
+  --color-primary-6: #006fff;
+  --color-primary-7: #005ee5;
+  --color-primary-8: #0054ce;
+  --color-primary-9: #0048b6;
+  --color-secondary: #d9d02f;
+  --color-secondary-0: #fdfce4;
+  --color-secondary-1: #f8f6d3;
+  --color-secondary-2: #f0ecaa;
+  --color-secondary-3: #e7e17c;
+  --color-secondary-4: #e0d856;
+  --color-secondary-5: #dbd33e;
+  --color-secondary-6: #d9d02f;
+  --color-secondary-7: #c0b820;
+  --color-secondary-8: #aaa317;
+  --color-secondary-9: #928d03;
   --color-black: #000;
+  --color-gray-0: #f5f5f5;
+  --color-gray-1: #e7e7e7;
+  --color-gray-2: #cdcdcd;
+  --color-gray-3: #b2b2b2;
+  --color-gray-4: #9a9a9a;
+  --color-gray-5: #8b8b8b;
+  --color-gray-6: #848484;
+  --color-gray-7: #717171;
+  --color-gray-8: #656565;
+  --color-gray-9: #575757;
+  --color-white: #fff;
 }
