--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -4,7 +4,7 @@
 
 .accordion-item {
   margin-bottom: 0.25rem;
-  border: 1px solid #e2e8f0;
+  border: 1px solid var(--color-gray-2);
   border-radius: 0.5rem;
 }
 
