--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -11,17 +11,45 @@
   vertical-align: middle;
   appearance: none;
   cursor: pointer;
-  background: var(--color-primary);
-  border: 1px solid var(--color-primary-border);
+  background: var(--color-primary-5);
+  border: 1px solid var(--color-primary-5);
   border-radius: 4px;
   outline: none;
 
   &[data-pressed] {
-    background: var(--color-primary-bg);
+    background-color: var(--color-primary-7);
+  }
+
+  &[data-disabled] {
+    color: var(--color-gray-6);
+    pointer-events: none;
+    background-color: var(--color-gray-1);
+    border-color: var(--color-gray-1);
   }
 
   &[data-focus-visible] {
-    outline: 2px solid var(--color-primary-border);
+    outline: 2px solid var(--color-primary-5);
     outline-offset: -1px;
+  }
+
+  &[data-variant="light"] {
+    color: var(--color-primary-6);
+    background-color: var(--color-primary-0);
+    border-color: var(--color-primary-0);
+
+    &[data-pressed] {
+      background-color: var(--color-primary-1);
+      border-color: var(--color-primary-1);
+    }
+  }
+
+  &[data-variant="outline"] {
+    color: var(--color-primary-5);
+    background: var(--color-white);
+    border-color: var(--color-primary-5);
+
+    &[data-pressed] {
+      background-color: var(--color-primary-0);
+    }
   }
 }
