--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -2,13 +2,13 @@
   padding: 0.286rem;
   margin: 0;
   font-size: 1.143rem;
-  color: var(--color-text);
-  background: var(--color-bg-container);
-  border: 1px solid var(--color-primary-border);
+  color: var(--color-black);
+  background: var(--color-white);
+  border: 1px solid var(--color-primary-5);
   border-radius: 6px;
 
   &[data-focused] {
-    outline: 2px solid var(--color-primary);
+    outline: 2px solid var(--color-primary-5);
     outline-offset: -1px;
   }
 }
