style: improve card design

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -23,6 +23,7 @@
   &[data-disabled] {
     color: var(--color-gray-6);
     pointer-events: none;
+    cursor: not-allowed;
     background-color: var(--color-gray-1);
     border-color: var(--color-gray-1);
   }
