--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1,29 +1,34 @@
 .tabs {
   display: flex;
+  flex-direction: column;
   color: var(--color-black);
 
-  &[data-orientation="horizontal"] {
-    flex-direction: column;
+  &[data-orientation="vertical"] {
+    flex-direction: row;
+
+    .tab-list {
+      flex-direction: column;
+    }
+
+    .tab {
+      &[data-selected] {
+        color: var(--color-primary-5);
+        border: none;
+        border-right: 2px solid var(--color-primary-5);
+      }
+    }
   }
 }
 
 .tab-list {
   display: flex;
-
-  &[data-orientation="horizontal"] {
-    border-bottom: 1px solid var(--color-primary-5);
-
-    .tab {
-      border-bottom: 3px solid var(--color-primary-5);
-    }
-  }
 }
 
 .tab {
   position: relative;
-  padding: 10px;
+  padding: 0.5rem 1rem;
   color: var(--color-black);
-  cursor: default;
+  cursor: pointer;
   outline: none;
   transition: color 200ms;
   forced-color-adjust: none;
@@ -35,10 +40,14 @@
 
   &[data-selected] {
     color: var(--color-primary-5);
+    border: none;
+    border-bottom: 2px solid var(--color-primary-5);
   }
 
   &[data-disabled] {
     color: var(--color-gray-5);
+    pointer-events: none;
+    cursor: not-allowed;
   }
 
   &[data-focus-visible]::after {
