--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -1,8 +1,4 @@
 .checkbox {
-  --selected-color: var(--color-primary-5);
-  --selected-color-pressed: var(--color-primary-6);
-  --checkmark-color: var(--color-white);
-
   display: flex;
   gap: 0.571rem;
   align-items: center;
@@ -44,17 +40,16 @@
   &[data-selected],
   &[data-indeterminate] {
     .checkbox-input {
-      background: var(--color-primary-5);
-      border-color: var(--color-primary-5);
+      background-color: var(--color-primary-5);
     }
 
     &[data-pressed] .checkbox-input {
-      background: var(--color-primary-6);
-      border-color: var(--color-primary-6);
+      background-color: var(--color-primary-6);
     }
 
     svg {
-      stroke-dashoffset: 44;
+      stroke: var(--color-white);
+      stroke-dashoffset: 0;
     }
   }
 
@@ -62,6 +57,21 @@
     & svg {
       fill: var(--color-primary-5);
       stroke: none;
+    }
+  }
+
+  &[data-disabled] {
+    color: var(--color-gray-6);
+    pointer-events: none;
+    cursor: not-allowed;
+
+    .checkbox-input {
+      background-color: var(--color-gray-1);
+      border-color: var(--color-gray-3);
+    }
+
+    svg {
+      stroke: var(--color-gray-3);
     }
   }
 }
