style: improve radio and input design

--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -3,7 +3,7 @@
   gap: 0.571rem;
   align-items: center;
   font-size: 1.143rem;
-  color: var(--color-primary-5);
+  color: var(--color-black);
   forced-color-adjust: none;
 
   &::before {
@@ -36,5 +36,16 @@
   &[data-focus-visible]::before {
     outline: 2px solid var(--color-primary-5);
     outline-offset: 2px;
+  }
+
+  &[data-disabled] {
+    color: var(--color-gray-6);
+    pointer-events: none;
+    cursor: not-allowed;
+
+    &::before {
+      background: var(--color-gray-1);
+      border-color: var(--color-gray-1);
+    }
   }
 }
