--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,13 +1,14 @@
 .input {
-  padding: 0.286rem;
+  padding: 0.5rem;
   margin: 0;
-  font-size: 1.143rem;
+  font-size: 1rem;
   color: var(--color-black);
   background: var(--color-white);
-  border: 1px solid var(--color-primary-5);
+  border: 2px solid var(--color-gray-2);
   border-radius: 6px;
 
   &[data-focused] {
+    border-color: var(--color-primary-5);
     outline: 2px solid var(--color-primary-5);
     outline-offset: -1px;
   }
