--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -5,7 +5,7 @@
     "track track";
   grid-template-columns: 1fr auto;
   max-width: 300px;
-  color: var(--color-primary-5);
+  color: var(--color-black);
 
   .slider-label {
     grid-area: label;
@@ -28,19 +28,20 @@
   }
 
   .slider-thumb {
-    width: 1.429rem;
-    height: 1.429rem;
+    width: 1rem;
+    height: 1rem;
+    cursor: pointer;
     background: var(--color-primary-5);
     border: 2px solid var(--color-primary-5);
     border-radius: 50%;
     forced-color-adjust: none;
 
     &[data-dragging] {
-      background: var(--color-primary-6);
+      background: var(--color-primary-7);
     }
 
     &[data-focus-visible] {
-      outline: 2px solid var(--color-primary-5);
+      outline: 2px solid var(--color-primary-7);
     }
   }
 
@@ -62,6 +63,21 @@
 
     .slider-thumb {
       top: 50%;
+    }
+  }
+
+  &[data-disabled] {
+    color: var(--color-gray-6);
+    pointer-events: none;
+    cursor: not-allowed;
+
+    .slider-track::before {
+      background-color: var(--color-gray-1);
+    }
+
+    .slider-thumb {
+      background-color: var(--color-gray-1);
+      border-color: var(--color-gray-1);
     }
   }
 }
