--- a/src/components/Switch/Switch.module.css
+++ b/src/components/Switch/Switch.module.css
@@ -1,28 +1,28 @@
 .switch {
   display: flex;
-  gap: 0.571rem;
+  gap: 0.5rem;
   align-items: center;
-  font-size: 1.143rem;
+  font-size: 1rem;
   color: var(--color-black);
-  forced-color-adjust: none;
+  cursor: pointer;
 
   .switch-indicator {
     width: 2rem;
-    height: 1.143rem;
+    height: 1rem;
     background: var(--color-white);
     border: 2px solid var(--color-primary-5);
-    border-radius: 1.143rem;
+    border-radius: 1rem;
     transition: all 200ms;
 
     &::before {
       display: block;
-      width: 0.857rem;
-      height: 0.857rem;
-      margin: 0.143rem;
+      width: 0.9rem;
+      height: 0.9rem;
+      margin: 0.05rem;
       content: "";
       background: var(--color-primary-5);
-      border-radius: 16px;
-      transition: all 200ms;
+      border-radius: 1rem;
+      transition: all 0.2s;
     }
   }
 
