--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -5,7 +5,7 @@
 .accordion-item {
   margin-bottom: 0.25rem;
   border: 1px solid var(--color-gray-2);
-  border-radius: 0.5rem;
+  border-radius: calc(var(--radius-size) * 0.5);
 }
 
 .accordion-trigger {
@@ -22,6 +22,7 @@
 
 .accordion-trigger:hover {
   background-color: #f8fafc;
+  border-radius: calc(var(--radius-size) * 0.5);
 }
 
 .accordion-icon {
@@ -42,19 +43,11 @@
   border-right: 2px solid currentcolor;
   border-bottom: 2px solid currentcolor;
   transition: transform 0.2s ease;
-  transform: translate(-50%, -75%) rotate(45deg);
-  transform-origin: center;
-}
-
-.accordion-icon-expanded::before {
-  transform: translate(-50%, -25%) rotate(-135deg);
 }
 
 .accordion-content {
   overflow: hidden;
-  transition:
-    height 0.2s ease,
-    padding 0.2s ease;
+  transition: all 0.2s ease;
 }
 
 .accordion-content-expanded {
