--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -13,7 +13,7 @@
   cursor: pointer;
   background: var(--color-primary-5);
   border: 1px solid var(--color-primary-5);
-  border-radius: 0.5rem;
+  border-radius: calc(var(--radius-size) * 0.5);
   outline: none;
 
   &[data-pressed] {
