--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   background-color: var(--color-white);
   border: 1px solid var(--color-gray-2);
-  border-radius: 0.5rem;
+  border-radius: calc(var(--radius-size) * 0.5);
   box-shadow: 0 1px 2px rgb(0 0 0 / 30%);
 }
 
