--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -1,20 +1,19 @@
 .radio {
   display: flex;
-  gap: 0.571rem;
+  gap: 0.5rem;
   align-items: center;
-  font-size: 1.143rem;
   color: var(--color-black);
   forced-color-adjust: none;
 
   &::before {
     box-sizing: border-box;
     display: block;
-    width: 1.286rem;
-    height: 1.286rem;
+    width: 1.2rem;
+    height: 1.2rem;
     content: "";
     background: var(--color-white);
     border: 0.143rem solid var(--color-primary-5);
-    border-radius: 1.286rem;
+    border-radius: 50%;
     transition: all 200ms;
   }
 
@@ -25,7 +24,7 @@
   &[data-selected] {
     &::before {
       border-color: var(--color-primary-5);
-      border-width: 0.429rem;
+      border-width: 0.5rem;
     }
 
     &[data-pressed]::before {
