--- a/src/components/Switch/Switch.module.css
+++ b/src/components/Switch/Switch.module.css
@@ -11,17 +11,17 @@
     height: 1rem;
     background: var(--color-white);
     border: 2px solid var(--color-primary-5);
-    border-radius: 1rem;
+    border-radius: calc(var(--radius-size) * 0.5);
     transition: all 200ms;
 
     &::before {
       display: block;
       width: 0.9rem;
       height: 0.9rem;
-      margin: 0.05rem;
+      margin: 0.05rem 0.1rem;
       content: "";
       background: var(--color-primary-5);
-      border-radius: 1rem;
+      border-radius: calc(var(--radius-size) * 0.5 - 0.1rem);
       transition: all 0.2s;
     }
   }
