--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -33,4 +33,10 @@
   --color-gray-8: #656565;
   --color-gray-9: #575757;
   --color-white: #fff;
+  --radius-size: 1rem;
+  --font-family: sans-serif;
+}
+
+* {
+  font-family: var(--font-family);
 }
