style: set font-family to all components

--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -4,7 +4,7 @@
 
 .accordion-item {
   margin-bottom: 0.25rem;
-  border: 1px solid var(--color-gray-2);
+  border: 1px solid var(--color-primary-2);
   border-radius: calc(var(--radius-size) * 0.5);
 }
 
@@ -14,6 +14,7 @@
   justify-content: space-between;
   width: 100%;
   padding: 1rem;
+  color: var(--color-primary-9);
   text-align: left;
   cursor: pointer;
   background: none;
@@ -21,7 +22,7 @@
 }
 
 .accordion-trigger:hover {
-  background-color: #f8fafc;
+  background-color: var(--color-primary-0);
   border-radius: calc(var(--radius-size) * 0.5);
 }
 
@@ -46,6 +47,7 @@
 }
 
 .accordion-content {
+  padding: 0 1rem;
   overflow: hidden;
   transition: all 0.2s ease;
 }
@@ -57,5 +59,4 @@
 
 .accordion-content-collapsed {
   height: 0;
-  padding: 0;
 }
