--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -1,6 +1,7 @@
 .tabs {
   display: flex;
   flex-direction: column;
+  font-family: var(--font-family);
   color: var(--color-black);
 
   &[data-orientation="vertical"] {
