--- a/src/components/Anchor/Anchor.module.css
+++ b/src/components/Anchor/Anchor.module.css
@@ -1,5 +1,6 @@
 .anchor {
   position: relative;
+  font-family: var(--font-family);
   color: var(--color-primary-5);
   text-decoration: underline;
   cursor: pointer;
