--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 0.5rem 1rem;
   margin: 0;
+  font-family: var(--font-family);
   font-size: 1rem;
   color: var(--color-white);
   text-align: center;
