--- a/src/components/CheckboxGroup/CheckboxGroup.module.css
+++ b/src/components/CheckboxGroup/CheckboxGroup.module.css
@@ -1,6 +1,7 @@
 .checkbox-group {
   display: flex;
   flex-direction: column;
-  gap: 0.571rem;
+  gap: 0.5rem;
+  font-family: var(--font-family);
   color: var(--color-black);
 }
