--- a/src/components/Heading/Heading.module.css
+++ b/src/components/Heading/Heading.module.css
@@ -1,29 +1,28 @@
+.heading {
+  font-family: var(--font-family);
+  color: var(--color-black);
+}
+
 .heading-level-1 {
   font-size: 2rem;
-  color: #333;
 }
 
 .heading-level-2 {
   font-size: 1.5rem;
-  color: #333;
 }
 
 .heading-level-3 {
   font-size: 1.25rem;
-  color: #333;
 }
 
 .heading-level-4 {
   font-size: 1rem;
-  color: #333;
 }
 
 .heading-level-5 {
   font-size: 0.875rem;
-  color: #333;
 }
 
 .heading-level-6 {
   font-size: 0.75rem;
-  color: #333;
 }
