--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,6 +1,7 @@
 .input {
   padding: 0.5rem;
   margin: 0;
+  font-family: var(--font-family);
   font-size: 1rem;
   color: var(--color-black);
   background: var(--color-white);
