--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 0.5rem;
   align-items: center;
+  font-family: var(--font-family);
   color: var(--color-black);
   forced-color-adjust: none;
 
