--- a/src/components/Switch/Switch.module.css
+++ b/src/components/Switch/Switch.module.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 0.5rem;
   align-items: center;
+  font-family: var(--font-family);
   font-size: 1rem;
   color: var(--color-black);
   cursor: pointer;
