--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -7,10 +7,18 @@
   background: var(--color-white);
   border: 2px solid var(--color-gray-2);
   border-radius: calc(var(--radius-size) * 0.5);
+  transition: all 0.2s;
 
   &[data-focused] {
     border-color: var(--color-primary-5);
-    outline: 2px solid var(--color-primary-5);
-    outline-offset: -1px;
+    box-shadow: 0 0 0 1px var(--color-primary-5);
+  }
+
+  &[data-disabled] {
+    color: var(--color-gray-6);
+    pointer-events: none;
+    cursor: not-allowed;
+    background-color: var(--color-gray-1);
+    border-color: var(--color-gray-1);
   }
 }
