--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -11,6 +11,7 @@
     display: block;
     width: 1.2rem;
     height: 1.2rem;
+    cursor: pointer;
     content: "";
     background: var(--color-white);
     border: 0.143rem solid var(--color-primary-5);
