--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -7,6 +7,7 @@
   background: var(--color-white);
   border: 2px solid var(--color-gray-2);
   border-radius: calc(var(--radius-size) * 0.5);
+  outline: none;
   transition: all 0.2s;
 
   &[data-focused] {
