--- a/src/components/Checkbox/Checkbox.module.css
+++ b/src/components/Checkbox/Checkbox.module.css
@@ -14,8 +14,8 @@
     width: 1.2rem;
     height: 1.2rem;
     cursor: pointer;
-    border: 2px solid var(--color-primary-5);
-    border-radius: calc(var(--radius-size) * 0.5);
+    border: var(--width-border) solid var(--color-primary-5);
+    border-radius: calc(var(--size-radius) * 0.5);
     transition: all 200ms;
   }
 
