--- a/src/components/Image/Image.module.css
+++ b/src/components/Image/Image.module.css
@@ -1,7 +1,7 @@
 .image {
   width: 100%;
   height: auto;
-  border-radius: calc(var(--radius-size));
+  border-radius: calc(var(--size-radius));
 
   &[data-variant="avatar"] {
     aspect-ratio: 1 / 1;
