--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,7 +2,7 @@
   font-family: var(--font-family);
   background-color: var(--color-white);
   border: 1px solid var(--color-gray-2);
-  border-radius: calc(var(--radius-size) * 0.5);
+  border-radius: calc(var(--size-radius) * 0.5);
   box-shadow: 0 1px 2px rgb(0 0 0 / 30%);
 }
 
