--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -33,8 +33,8 @@
     height: 1rem;
     cursor: pointer;
     background: var(--color-primary-5);
-    border: 2px solid var(--color-primary-5);
-    border-radius: calc(var(--radius-size) * 0.5);
+    border: var(--width-border) solid var(--color-primary-5);
+    border-radius: calc(var(--size-radius) * 0.5);
     forced-color-adjust: none;
 
     &[data-dragging] {
