--- a/src/components/Switch/Switch.module.css
+++ b/src/components/Switch/Switch.module.css
@@ -11,8 +11,8 @@
     width: 2rem;
     height: 1rem;
     background: var(--color-white);
-    border: 2px solid var(--color-primary-5);
-    border-radius: calc(var(--radius-size) * 0.5);
+    border: var(--width-border) solid var(--color-primary-5);
+    border-radius: calc(var(--size-radius) * 0.5);
     transition: all 200ms;
 
     &::before {
@@ -22,7 +22,7 @@
       margin: 0.05rem 0.1rem;
       content: "";
       background: var(--color-primary-5);
-      border-radius: calc(var(--radius-size) * 0.5 - 0.1rem);
+      border-radius: calc(var(--size-radius) * 0.5 - 0.1rem);
       transition: all 0.2s;
     }
   }
