--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -15,7 +15,7 @@
       &[data-selected] {
         color: var(--color-primary-5);
         border: none;
-        border-right: 2px solid var(--color-primary-5);
+        border-right: var(--width-border) solid var(--color-primary-5);
       }
     }
   }
@@ -24,7 +24,7 @@
 .tab-list {
   display: flex;
   border: none;
-  border-bottom: 2px solid var(--color-gray-2);
+  border-bottom: var(--width-border) solid var(--color-gray-2);
 }
 
 .tab {
@@ -44,7 +44,7 @@
   &[data-selected] {
     color: var(--color-primary-5);
     border: none;
-    border-bottom: 2px solid var(--color-primary-5);
+    border-bottom: var(--width-border) solid var(--color-primary-5);
   }
 
   &[data-disabled] {
@@ -57,7 +57,7 @@
     position: absolute;
     inset: 4px;
     content: "";
-    border: 2px solid var(--color-primary-5);
+    border: var(--width-border) solid var(--color-primary-5);
     border-radius: 4px;
   }
 }
